@@ -1,6 +1,13 @@
+2017-03-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* src/parse.cpp (collapsedList): Preserve type for Date and
+	Datetime vectors
+
 2017-02-12  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): Release 0.1.1 
+	* DESCRIPTION (Version, Date): Release 0.1.1
 
 2017-02-08  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>
 
@@ -8,7 +15,8 @@
 
 2017-01-29  Dirk Eddelbuettel  <edd@debian.org>
 
-	* R/parseToml.R: Output from print.toml() method without final NULL
+	* R/parseToml.R: Output from print.toml() method without final
+	NULL
 
         * tests/arrays.Rout.save: Updated reference output
         * tests/bool_datetime.Rout.save: Idem
